<resources>
    <string name="app_name">NordNoun</string>

    <string name="main_header">Modules</string>

    <string name="app_loading_header">Loading</string>

    <string name="app_item_progress">Progress</string>
    <string name="app_item_buttonContinue">Continue</string>

    <string name="app_item_buttonPractise">Practise</string>

    <string name="app_error_header">Oops!</string>
    <string name="app_error_message">It looks like something went wrong</string>
    <string name="app_error_button">Home</string>

    <string name="app_close_header">End this lesson?</string>
    <string name="app_close_message">You will lose any progress made</string>
    <string name="app_close_button_yes">Yes</string>
    <string name="app_close_button_no">No</string>

    <string name="app_feedback_header">Correct answer: %s</string>
    <string name="app_feedback_message">How did you find this question?</string>

    <string name="app_hint_header">Need some help?</string>
    <string name="app_hint_english">English: %s</string>
    <string name="app_hint_swedish">Swedish: %s</string>
    <string name="app_dismiss_button">Dismiss</string>

    <string name="app_result_credit">Developed by Damanda</string>
    <string name="app_result_header">Well done!</string>
    <string name="app_result_message">You scored %d out of %d</string>

    <string name="app_answer_correct">Correct</string>
    <string name="app_answer_correct_spelling">Check your spelling of %s</string>
    <string name="app_answer_incorrect">Incorrect</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="question_number_title">Number of questions</string>
    <string name="question_number_key">preference_number</string>

    <string name="hint_key">preference_hint</string>
    <string name="vibration_key">preference_vibrate</string>

    <string name="sounds_key">preference_sound</string>
    <string name="word_sounds_key">preference_word</string>
    <string name="correct_sounds_key">preference_correct</string>
    <string name="error_sounds_key">preference_error</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>