<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="584dp">

            <TextView
                android:id="@+id/textHintHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/app_hint_header"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/textEnglish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/app_hint_english"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/textSwedish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/app_hint_swedish"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonDismiss"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:text="@string/app_dismiss_button" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>